# dde-dialog

./: CMakeLists.txt
debian/: changelog  control  copyright  rules
misc/dbus/conf.d/: org.deepin.dde.dialog1.conf
misc/dbus/system-services/: org.deepin.dde.dialog1.service
misc/example/: example.yaml
misc/systemd/system/: dde-dialog.service
misc/systemd/user/: dde-dialog-agent.service
misc/sysusers.d/: dde-dialog.conf
src/: CMakeLists.txt
src/agent/: Agent.cpp  Agent.h  AgentAdaptor.cpp  AgentAdaptor.h  AgentInterface.cpp  AgentInterface.h  CMakeLists.txt  DialogInstance.cpp  DialogInstance.h  DialogModel.cpp  DialogModel.h  Main.qml  main.cpp
src/common/: DBusTypes.cpp  DBusTypes.h  OpenOptions.cpp  OpenOptions.h
src/daemon/: CMakeLists.txt  Dialog.cpp  Dialog.h  DialogAdaptor.cpp  DialogAdaptor.h  main.cpp  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Session.xml
